--- a/.github/workflows/update-values.yaml
+++ b/.github/workflows/update-values.yaml
@@ -21,5 +21,5 @@ jobs:
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
           git commit -am "Update image tag to ${VERSION}"
-          git push
+          git push origin HEAD:main
 
