--- a/.github/workflows/update-values.yaml
+++ b/.github/workflows/update-values.yaml
@@ -15,6 +15,13 @@ jobs:
       - name: Set version from tag
         run: echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_ENV
 
+      - name: Set up Git for push
+        run: |
+          git config user.name "GitHub Actions"
+          git config user.email "actions@github.com"
+          git remote set-url origin https://x-access-token:${{ secrets.argo_pat }}@github.com/${{ github.repository }}
+
+
       - name: Update image tag in values.yaml
         run: |
           sed -i "s/^  tag: .*/  tag: ${VERSION}/" flask-app/values.yaml
