--- a/.github/workflows/update-values.yaml
+++ b/.github/workflows/update-values.yaml
@@ -19,7 +19,7 @@ jobs:
         run: |
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
-          git remote set-url origin https://x-access-token:${{ secrets.argo_pat }}@github.com/${{ github.repository }}
+          git remote set-url origin https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }}
 
 
       - name: Update image tag in values.yaml
