--- a/.github/workflows/update-values.yaml
+++ b/.github/workflows/update-values.yaml
@@ -11,20 +11,21 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.GH_PAT }} 
 
       - name: Set version from tag
         run: echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_ENV
 
       - name: Set up Git for push
         run: |
-          git config user.name "GitHub Actions"
-          git config user.email "actions@github.com"
-          git remote set-url origin https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }}
+          git config user.name "BronislavaKorolyova"
+          git config user.email "bronya.korolyova@gmail.com"
 
 
       - name: Update image tag in values.yaml
         run: |
           sed -i "s/^  tag: .*/  tag: ${VERSION}/" flask-app/values.yaml
-          git commit -am "Update image tag to ${VERSION}"
-          git push origin HEAD:main
+          git commit -m "Update image tag to ${VERSION}"
+          git push 
 
