--- a/.github/workflows/update-values.yaml
+++ b/.github/workflows/update-values.yaml
@@ -26,6 +26,7 @@ jobs:
       - name: Update image tag in values.yaml
         run: |
           sed -i "s/^  tag: .*/  tag: ${VERSION}/" flask-app/values.yaml
+          git add flask-app/values.yaml
           git commit -m "Update image tag to ${VERSION}"
           git push 
 
