--- a/.github/workflows/update-values.yaml
+++ b/.github/workflows/update-values.yaml
@@ -28,5 +28,5 @@ jobs:
           sed -i "s/^  tag: .*/  tag: ${VERSION}/" flask-app/values.yaml
           git add flask-app/values.yaml
           git commit -m "Update image tag to ${VERSION}"
-          git push 
+          git push origin HEAD:main
 
