--- a/flask-app/values.yaml
+++ b/flask-app/values.yaml
@@ -2,7 +2,7 @@ replicaCount: 1
 
 image:
   repository: bronyakorolyova/weather-app
-  tag: latest
+  tag: 1.0.13
   pullPolicy: IfNotPresent
 
 service:
