--- a/flask-app/values.yaml
+++ b/flask-app/values.yaml
@@ -1,7 +1,7 @@
 replicaCount: 1
 
 image:
-  repository: bronyakorolyova/weather-app
+  repository: bronyakorolyova/argo
   tag: 1.0.13
   pullPolicy: IfNotPresent
 
